View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030657 | Open CASCADE | OCCT:Visualization | public | 2019-04-17 22:29 | 2019-08-15 17:49 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030657: Visualization - misprint in Graphic3d_ZLayerSettings::SetOrigin() | ||||
Description | Graphic3d_ZLayerSettings::SetOrigin() contains misprint - Geom_Transformation is created uninitialized. Note that since this field is not actually used (only IsNull() check used), this issue remained hidden. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR30657 has been created by kgv. SHA-1: d250df94b330c9ff6adb6bf23385794c7943f949 Detailed log of new commits: Author: kgv Date: Wed Apr 17 22:23:51 2019 +0300 0030657: Visualization - misprint in Graphic3d_ZLayerSettings::SetOrigin() Add missing initialization of Geom_Transformation object. |
|
Please raise the patch. |
|
Branch CR30657 has been deleted by inv. SHA-1: d250df94b330c9ff6adb6bf23385794c7943f949 |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-04-17 22:29 | kgv | New Issue | |
2019-04-17 22:29 | kgv | Assigned To | => kgv |
2019-04-17 22:30 | git | Note Added: 0083834 | |
2019-04-17 22:34 | kgv | Product Version | 7.3.0 => 7.1.0 |
2019-04-18 00:49 | kgv | Note Added: 0083836 | |
2019-04-18 00:49 | kgv | Assigned To | kgv => bugmaster |
2019-04-18 00:49 | kgv | Severity | minor => trivial |
2019-04-18 00:49 | kgv | Status | new => resolved |
2019-04-18 00:50 | kgv | Status | resolved => reviewed |
2019-04-18 18:09 | bugmaster | Status | reviewed => tested |
2019-04-21 10:55 | bugmaster | Changeset attached | => occt master 130bc3c0 |
2019-04-21 10:55 | bugmaster | Status | tested => verified |
2019-04-21 10:55 | bugmaster | Resolution | open => fixed |
2019-04-21 11:05 | git | Note Added: 0083900 | |
2019-08-15 17:49 | bugmaster | Test case number | => Not required |