0030657: Visualization - misprint in Graphic3d_ZLayerSettings::SetOrigin()

Add missing initialization of Geom_Transformation object.